--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 	},
 	"devDependencies": {
 		"browser-sync": "latest",
-		"del": "^6.0.0",
+		"del": "latest",
 		"gulp": "latest",
 		"gulp-autoprefixer": "latest",
 		"gulp-clean-css": "latest",
-		"gulp-file-include": "^2.3.0",
+		"gulp-file-include": "latest",
 		"gulp-fonter-fix": "latest",
 		"gulp-group-css-media-queries": "latest",
 		"gulp-if": "latest",
@@ -43,7 +43,6 @@
 		"gulp-webpcss": "latest",
 		"gulp-zip": "latest",
 		"sass": "latest",
-		"slick-carousel": "^1.8.1",
 		"swiper": "latest",
 		"vinyl-ftp": "latest",
 		"webp-converter": "2.2.3",
